opti: 代码优化.